test/functional/directory/gds/ts/gdssetup/lib/valid/sv_domnodef5.cleanup
# 
# @OSF_COPYRIGHT@
# COPYRIGHT NOTICE
# Copyright (c) 1990, 1991, 1992, 1993, 1994, 1996 Open Software Foundation, Inc.
# ALL RIGHTS RESERVED (DCE).  See the file named COPYRIGHT.DCE for 
# the full copyright text.
#
# 
# HISTORY
# $Log: sv_domnodef5.cleanup,v $
# Revision 1.1.4.2  1996/03/11  01:36:15  marty
# 	Update copyright years
# 	[1996/03/10  19:38:56  marty]
#
# Revision 1.1.4.1  1995/12/11  16:50:54  root
# 	Submit
# 	[1995/12/11  16:37:09  root]
# 
# Revision 1.1.2.2  1994/08/19  13:56:24  marrek
# 	Improve testcode coverage OT11586.
# 	[1994/08/19  11:44:07  marrek]
# 
# Revision 1.1.2.1  1994/06/21  14:33:41  marrek
# 	Change service controls.
# 	[1994/06/16  15:54:54  marrek]
# 
# 	Created in June 94 code submission.
# 	[1994/06/10  16:08:57  marrek]
# 
# $EndLog$
# 
# $RCSfile: sv_domnodef5.cleanup,v $ $Revision: 1.1.4.2 $ $Date: 1996/03/11 01:36:15 $
# 
gdscp -c "x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m1; \
	  x500svc modify -preferadmfunctions TRUE -dontusecopy FALSE -localscope TRUE; \
	  x500obj delete /C=cr/O=dbp/OU=dap11/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=cr/O=dbp/OU=dap11/CN=dsa; \
	  x500obj delete /C=cr/O=dbp/OU=dap11; \
	  x500obj delete /C=cr/O=dbp; \
	  x500obj delete /C=cr; \
          x500obj bind -dirid 3 -dsa /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m5; \
	  x500obj delete /C=cr/O=dbp/OU=dap11/CN=dsa/CN=dsa-m3; \
	  x500obj delete /C=cr/O=dbp/OU=dap11/CN=dsa; \
	  x500obj delete /C=cr/O=dbp/OU=dap11; \
	  x500obj delete /C=cr/O=dbp; \
	  x500obj delete /C=cr; \
          x500obj bind -dirid 3 -cache; \
	  x500svc modify -preferadmfunctions TRUE -duacache TRUE -duafirst TRUE -usedsa FALSE -cacheclass RESIDENT -dontusecopy FALSE; \
	  x500obj delete 43.12.2.1107.1.3.4.8=DEFAULT-DSA; \
	  x500obj delete /C=de/O=dbp/OU=dap11/CN=dsa/CN=dsa-m7"

gdssysadm -fd -p
gdssysadm -fc -m2 -d3 -p
gdssysadm -fA -p
